# meddisc

./: .gitignore  Dockerfile  LICENSE  README  README.md  action_groups_dcm.csv  requested_action_group_dcm.csv  requirements copy.txt  requirements.txt  user_default_input.json  user_input.json
.github/: dependabot.yml
.github/workflows/: workflow.yml
dataset/raw_bkp/: SYN00001.dcm
python/: Dockerfile  Makefile  main.py  pyproject.toml
python/prm/: sample.dcm
python/prm/static/: index.html
python/python/: Dockerfile  Makefile  main.py  pyproject.toml
python/static/: script.js  style.css
python/templates/: index.html
src/: action_tools.py  dcm_deidentifier.py  dcm_img_text_remover.py  dcm_pixel_data_cleaner.py  generate_action_groups.py  main.py  requirements.txt  rw.py  server.py  user_default_input.json  visuals.py
src/action_groups/: generate_action_groups.py
src/pretrained_segmenters/: covid19
src/static/: client.js  index.html  script.js  style.css
