[project]
dependencies = [
  "aiofiles==23.2.1",
  "fastapi==0.110.1",
  "fire==0.6.0",
  "keras-ocr==0.9.3",
  "litemedsam@https://api.github.com/repos/bowang-lab/MedSAM/tarball/LiteMedSAM",
  "lxml==5.2.0",
  "pydicom==2.4.4",
  "pylibjpeg-libjpeg==2.1.0",
  "pylibjpeg==2.0.0",
  "python-multipart==0.0.9",
  "segment-anything@https://api.github.com/repos/facebookresearch/segment-anything/tarball/main",
  "tensorflow==2.16.1",
  "torch==2.2.2",
  "torchvision==0.17.2",
  "uvicorn==0.27.1"
]
name = "meddisc"
version = "0.0.0"

[project.optional-dependencies]
dev = [
  "coverage==7.4.4",
  "djlint==1.34.1",
  "mypy==1.9.0",
  "ruff==0.3.5",
  "ssort==0.12.4",
  "toml-sort==0.23.1"
]

[project.scripts]
meddisc = "main:main_cli"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.package-data]
'*' = [
  "*.css",
  "*.html",
  "*.js",
  "*.pth"
]

[tool.setuptools.packages.find]
where = ["."]
