[project]
dependencies = [
  "aiofiles==23.2.1",
  "fastapi==0.111.0",
  "fire==0.6.0",
  "keras-ocr==0.9.3",
  "litemedsam@https://api.github.com/repos/bowang-lab/MedSAM/tarball/9df02bf96f77f47d998b5ebc1c152d543b769ca3",
  "lxml==5.2.2",
  "pydicom==2.4.4",
  "pylibjpeg-libjpeg==2.1.0",
  "pylibjpeg==2.0.0",
  "python-multipart==0.0.9",
  "segment-anything@https://api.github.com/repos/facebookresearch/segment-anything/tarball/6fdee8f2727f4506cfbbe553e23b895e27956588",
  "tensorflow==2.16.1",
  "torch==2.3.0",
  "torchvision==0.18.0",
  "uvicorn==0.30.0"
]
name = "meddisc"
version = "0.0.0"

[project.optional-dependencies]
dev = [
  "coverage==7.5.3",
  "djlint==1.34.1",
  "mypy==1.10.0",
  "ruff==0.4.7",
  "ssort==0.13.0",
  "toml-sort==0.23.1"
]

[project.scripts]
meddisc = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.package-data]
'*' = [
  "*.css",
  "*.html",
  "*.js",
  "*.pth"
]

[tool.setuptools.packages.find]
where = ["."]
